# embers

./: .gitignore  CMakeLists.txt  LICENSE  README.md
lib/: CMakeLists.txt
lib/include/: embers.h  logging.h
lib/include/config/: config.h
lib/include/drivers/: uart.h
lib/src/: embers.c  logging.c
lib/src/drivers/: uart.c
src/: main.c
